# cmd/am2server/internal/user/routes.go
@@ -7,4 +7,5 @@ import "net/http"
 func (s *Service) RegisterHandlers(mux *http.ServeMux) {
 	mux.HandleFunc("GET /users/count", s.handleContUsers())
 	mux.HandleFunc("GET /users", s.handleGetUserByEmail())
+	mux.HandleFunc("GET /favorites", s.handleListAllFavoriteCaptures())
 }
