# cmd/am2server/internal/user/user.sql.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.26.0
+//   sqlc v1.27.0
 // source: user.sql
 
 package user
@@ -41,6 +41,65 @@ func (q *Queries) GetUserByEmail(ctx context.Context, email string) (User, error
 		&i.Picture,
 	)
 	return i, err
+}
+
+const listAllFavoriteCaptures = `-- name: ListAllFavoriteCaptures :many
+SELECT c.id, c.name, c.description, c.downloads, c.has_cab, c.type, c.created_at, c.demo_link, uf.user_id
+FROM user_favorite uf, capture c
+WHERE uf.capture_id = c.id
+ORDER BY uf.created_at DESC
+LIMIT ? OFFSET ?
+`
+
+type ListAllFavoriteCapturesParams struct {
+	Limit  int64
+	Offset int64
+}
+
+type ListAllFavoriteCapturesRow struct {
+	ID          int64
+	Name        string
+	Description sql.NullString
+	Downloads   int64
+	HasCab      sql.NullBool
+	Type        string
+	CreatedAt   time.Time
+	DemoLink    sql.NullString
+	UserID      int64
+}
+
+// http: GET /favorites
+func (q *Queries) ListAllFavoriteCaptures(ctx context.Context, arg ListAllFavoriteCapturesParams) ([]ListAllFavoriteCapturesRow, error) {
+	rows, err := q.db.QueryContext(ctx, listAllFavoriteCaptures, arg.Limit, arg.Offset)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []ListAllFavoriteCapturesRow
+	for rows.Next() {
+		var i ListAllFavoriteCapturesRow
+		if err := rows.Scan(
+			&i.ID,
+			&i.Name,
+			&i.Description,
+			&i.Downloads,
+			&i.HasCab,
+			&i.Type,
+			&i.CreatedAt,
+			&i.DemoLink,
+			&i.UserID,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
 }
 
 const addFavoriteCapture = `-- name: addFavoriteCapture :execresult
